html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
body {
    background-color: black;
    border-left: 5px white;
    
}
.altitudes {
        margin-top: 50px;
        width: 70px;
        height: auto;
        background: gray;
        position: absolute;
        z-index: 5000;
        color: white;

}

#currentAlt {
    position: fixed;
    top: 2px;
    color: magenta;
    margin-top: 10px;
    font-size: large;
    padding: 3px;
    margin-bottom: 3px;

}
#altitude1 {
    margin-bottom: 5cm;
    
}
#altitude2 {
    margin-bottom: 5cm;
    
}
#altitude3 {
    margin-bottom: 5cm;
    
}
#altitude4 {
    margin-bottom: 5cm;
    
}

#altMrk1 {
    position: absolute;
    right: 0px;
    top: 10px;
    height: 1.5px;
    width: 20px;
    background-color: white;

}

#altMrk2 {
    position: absolute;
    right: 0px;
    top: 215px;
    height: 1.5px;
    width: 20px;
    background-color: white;

}
#altMrk3 {
    position: absolute;
    right: 0px;
    top: 423px;
    height: 1.5px;
    width: 20px;
    background-color: white;

}
#altMrk4 {
    position: absolute;
    right: 0px;
    top: 630px;
    height: 1.5px;
    width: 20px;
    background-color: white;

}

.distances {
    color: white;
    text-align: bottom;
    width: 100%;
    height: 31px;
    padding: 1px;
    background-color: gray;
    color: #ffffff;
    position: fixed;
    bottom: 0;
    text-align: center;
    margin-left: 1.5cm;
    margin-right: auto;
    z-index: 50;
}

#distance1 {
    text-align: center;
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    margin-top: 15px;

}

#distance2 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    margin-top: 15px;

}

#distance3 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    margin-top: 15px;
}

#distance4 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    margin-top: 15px;
}

#distance5 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    margin-top: 15px;
}

#waypoint1 {
    text-align: center;
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 13%;
    

}

#waypoint2 {
    color: magenta;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 29%;

}

#waypoint3 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 49%;
}

#waypoint4 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 69%;
}

#waypoint5 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 89%;
}

#const1 {
    text-align: center;
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 13%;
    margin-top:15px;

}

#const2 {
    color: magenta;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 29.5%;
    margin-top:15px;

}

#const3 {
    color: black; 
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 49%;
    margin-top:15px;
}

#const4 {
    color: fixed;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 69%;
    margin-top:15px;
}

#const5 {
    color: white;
    width: 20%;
    float: left;
    z-index: 100;
    position: fixed;
    left: 89%;
    margin-top:15px;
}

#line1 {
    border-left: 3px dashed white;
    height: 700px;
    position: fixed;
    left: 23%;
    margin-top: 45px;
    margin-left: -3px;
    top: 0;
  }

  #line2 {
    border-left: 3px dashed magenta;
    height: 700px;
    position: fixed;
    left: 33%;
    margin-top: 45px;
    margin-left: -3px;
    top: 0;
  }

  #line3 {
    border-left: 3px dashed white;
    height: 700px;
    position: fixed;
    left: 53%;
    margin-top: 45px;
    margin-left: -3px;
    top: 0;
  }

  #line4 {
    border-left: 3px dashed white;
    height: 700px;
    position: fixed;
    left: 73%;
    margin-top: 45px;
    margin-left: -3px;
    top: 0;
  }

  #line5 {
    border-left: 3px dashed white;
    height: 700px;
    position: fixed;
    left: 93%;
    margin-top: 45px;
    margin-left: -3px;
    top: 0;
  }

  #aglLine {
    border-bottom: 3px dashed #00ff00;
    height: 743px;
    z-index: 1;

}



#distMrk1 {
    border-left: 1.5px solid white;
    height: 15px;
    position: absolute;
    left: 10%;

  }

  #distMrk2 {
    border-left: 1.5px solid white;
    height: 15px;
    position: absolute;
    left: 30%;

  }

  #distMrk3 {
    border-left: 1.5px solid white;
    height: 15px;
    position: absolute;
    left: 50%;

  }

  #distMrk4 {
    border-left: 1.5px solid white;
    height: 15px;
    position: absolute;
    left: 70%;
  }

  #distMrk5 {
    border-left: 1.5px solid white;
    height: 15px;
    position: absolute;
    left: 89.75%;


  }

